--- a/rre-maven-plugin/pom.xml
+++ b/rre-maven-plugin/pom.xml
@@ -34,6 +34,7 @@
         <module>rre-maven-elasticsearch-plugin</module>
         <module>rre-maven-external-elasticsearch-plugin</module>
         <module>rre-maven-external-solr-plugin</module>
+        <module>rre-maven-evaluation-plugin</module>
     </modules>
     <packaging>pom</packaging>
     <properties>
