--- a/rre-core/pom.xml
+++ b/rre-core/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>rre</artifactId>
         <groupId>io.sease</groupId>
-        <version>1.0</version>
+        <version>1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>rre-core</artifactId>
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>io.sease</groupId>
             <artifactId>rre-search-platform-api</artifactId>
-            <version>1.0</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
