--- a/rre-maven-plugin/pom.xml
+++ b/rre-maven-plugin/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>rre</artifactId>
         <groupId>io.sease</groupId>
-        <version>1.0</version>
+        <version>1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>rre-maven-plugin</artifactId>
@@ -70,7 +70,7 @@
         <dependency>
             <groupId>io.sease</groupId>
             <artifactId>rre-core</artifactId>
-            <version>1.0</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.maven.plugin-testing</groupId>
