--- a/rre-maven-plugin/rre-maven-solr-plugin/pom.xml
+++ b/rre-maven-plugin/rre-maven-solr-plugin/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>rre-maven-plugin</artifactId>
         <groupId>io.sease</groupId>
-        <version>1.0</version>
+        <version>1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>rre-maven-solr-plugin</artifactId>
@@ -39,7 +39,7 @@
         <dependency>
             <groupId>io.sease</groupId>
             <artifactId>rre-search-platform-api</artifactId>
-            <version>1.0</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>io.sease</groupId>
