--- a/rre-persistence-plugin/pom.xml
+++ b/rre-persistence-plugin/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>rre</artifactId>
         <groupId>io.sease</groupId>
-        <version>1.0</version>
+        <version>1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <name>RRE - Persistence Framework</name>
@@ -37,7 +37,7 @@
         <dependency>
             <groupId>io.sease</groupId>
             <artifactId>rre-core</artifactId>
-            <version>${parent.version}</version>
+            <version>${project.parent.version}</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
