--- a/rre-search-platform/rre-search-platform-solr-impl/pom.xml
+++ b/rre-search-platform/rre-search-platform-solr-impl/pom.xml
@@ -23,7 +23,7 @@
     <parent>
         <artifactId>rre-search-platform</artifactId>
         <groupId>io.sease</groupId>
-        <version>1.0</version>
+        <version>1.1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>rre-search-platform-solr-impl</artifactId>
@@ -33,7 +33,7 @@
         <dependency>
             <groupId>io.sease</groupId>
             <artifactId>rre-search-platform-api</artifactId>
-            <version>1.0</version>
+            <version>${project.parent.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.solr</groupId>
@@ -76,6 +76,7 @@
             <plugin>
                 <groupId>org.apache.rat</groupId>
                 <artifactId>apache-rat-plugin</artifactId>
+                <version>0.13</version>
                 <configuration>
                     <excludes>
                         <exclude>**/*.properties</exclude>
