--- a/rre-server/pom.xml
+++ b/rre-server/pom.xml
@@ -24,11 +24,12 @@
         <groupId>org.springframework.boot</groupId>
         <artifactId>spring-boot-starter-parent</artifactId>
         <version>1.5.6.RELEASE</version>
+        <relativePath/>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>io.sease</groupId>
     <artifactId>rre-server</artifactId>
-    <version>1.0</version>
+    <version>1.1</version>
     <name>RRE - Web Control Panel</name>
     <properties>
         <java.version>1.8</java.version>
@@ -57,7 +58,7 @@
         <dependency>
             <groupId>io.sease</groupId>
             <artifactId>rre-core</artifactId>
-            <version>1.0</version>
+            <version>${project.version}</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -113,6 +114,7 @@
             <plugin>
                 <groupId>org.apache.rat</groupId>
                 <artifactId>apache-rat-plugin</artifactId>
+                <version>0.13</version>
                 <configuration>
                     <excludes>
                         <exclude>**/static/**</exclude>
