--- a/rre-search-platform/rre-search-platform-elastic-search-impl/pom.xml
+++ b/rre-search-platform/rre-search-platform-elastic-search-impl/pom.xml
@@ -71,5 +71,17 @@
             <artifactId>analysis-common</artifactId>
             <version>${project.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.mock-server</groupId>
+            <artifactId>mockserver-junit-rule</artifactId>
+            <version>5.11.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.10.0</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 </project>
