--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,8 @@
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
         <jackson.version>2.9.4</jackson.version>
+        <elasticsearch.version>7.5.0</elasticsearch.version>
+        <solr.version>8.3.0</solr.version>
         <github.global.server>github</github.global.server>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
